# InverseKinematicsSBI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  simple_example_coordinate_sampling.py  simple_example_prior_posterior.py  test.py  test_2d.py  test_3d.py  tox.ini  visualize_12_joint_robot.py  visualize_1_rail_3_joint_robot.py
.github/workflows/: codeberg-mirror.yml
forward_kinematics/: __init__.py  base_robot.py  component_robot.py  dh_robot.py  prior.py  utils.py
inverse_kinematics/: execute_benchmark.py  forward.py  helpers.py  plot.py  solve_abc.py
inverse_kinematics/benchmark/: __init__.py  benchmark_robot.py  components.py  execute_benchmark.py
inverse_kinematics/forward_kinematics/: __init__.py  base_robot.py  component_robot.py  dh_robot.py  utils.py
src/inverse_kinematics_sbi/: __init__.py  base_robots.py  benchmark_robot.py  components.py  execute_benchmark.py  plot.py  proba_robot.py  robots.py  solve_abc.py  trigonometry.py
tests/: conftest.py  test_forward.py  test_posterior.py
tests/inverse_kinematics_sbi/: test_components.py  test_proba_robot.py  test_robots.py  test_trigonometry.py
tests/metrics/: c2st.py
utils/: plot.py
